@@ -1,6 +1,6 @@
 Package: spdep
 Version: 0.4-18
-Date: 2008-02-13
+Date: 2008-02-14
 Title: Spatial dependence: weighting schemes, statistics and models
 Encoding: latin1
 Author: Roger Bivand <Roger.Bivand@nhh.no>, with contributions by Luc Anselin,
@@ -9,7 +9,7 @@ Author: Roger Bivand <Roger.Bivand@nhh.no>, with contributions by Luc Anselin,
   Werner Mueller, Hisaji Ono, Pedro Peres-Neto, Markus Reder,
   Michael Tiefelsdorf, and Danlin Yu.
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
-Depends: R (>= 2.4.0), methods, tripack, sp (>= 0.9), maptools (>= 0.5-4), boot, spam(>= 0.13-1), Matrix (>= 0.9975-11)
+Depends: R (>= 2.4.0), methods, tripack, sp (>= 0.9), maptools (>= 0.5-4), boot, spam(>= 0.13-1), Matrix (>= 0.999375-6)
 Description: A collection of functions to create spatial weights matrix
   objects from polygon contiguities, from point patterns by distance and
   tesselations, for summarising these objects, and for permitting their
